--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,11 @@ name = "dp100-ds-associate-azure"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
     "azure-ai-ml>=1.25.0",
+    "azure-identity>=1.20.0",
+    "ipykernel>=6.29.5",
+    "jupyter>=1.1.1",
+    "notebook>=7.3.2",
 ]
