--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,8 @@ dependencies = [
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "notebook>=7.3.2",
+    "numpy>=2.2.3",
+    "pandas>=2.2.3",
     "python-dotenv>=1.0.1",
+    "scikit-learn>=1.6.1",
 ]
